[package]
name = "emit_elasticsearch"
version = "0.1.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
license = "Apache-2.0"
description = "Structured logging to Elasticsearch with emit."
documentation = "https://emit-rs.github.io/emit_elasticsearch/emit_elasticsearch/"
repository = "https://github.com/emit-rs/emit_elasticsearch"

[dependencies]
emit = { version = "*", git = "https://github.com/emit-rs/emit.git" }
chrono = "0.2"
hyper = "0.9"
elastic_hyper = "0.2"

[dev-dependencies]
json_str = "*"